<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectLivingStatusActivity">

    <TextView
        android:id="@+id/selectLivingStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/living_status_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/livingStatusQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/living_status_question"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectLivingStatusText" />

    <RadioGroup
        android:id="@+id/livingStatusRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/livingStatusQuestion"
        app:layout_constraintTop_toBottomOf="@+id/livingStatusQuestion">

        <RadioButton
            android:id="@+id/homeOwnerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_owner_radio" />

        <RadioButton
            android:id="@+id/renterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renter_radio" />

        <RadioButton
            android:id="@+id/lesseeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessee_radio" />

        <RadioButton
            android:id="@+id/otherButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_radio" />

        <RadioButton
            android:id="@+id/preferButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelLivingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="@+id/submitLivingButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submitLivingButton" />

    <Button
        android:id="@+id/submitLivingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>