<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentificationActivity">

    <TextView
        android:id="@+id/identificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/identification_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_label"
        app:layout_constraintBottom_toBottomOf="@+id/nameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameText" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        app:layout_constraintBottom_toBottomOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/emailText" />

    <TextView
        android:id="@+id/roleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/role_label"
        app:layout_constraintStart_toStartOf="@+id/emailLabel"
        app:layout_constraintTop_toTopOf="@+id/roleRadioGroup" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/identificationText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <RadioGroup
        android:id="@+id/roleRadioGroup"
        android:layout_width="178dp"
        android:layout_height="170dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/emailText">

        <RadioButton
            android:id="@+id/studentRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_label" />

        <RadioButton
            android:id="@+id/employeeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee_label" />

        <RadioButton
            android:id="@+id/otherRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/identificationNextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>