<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectEducationActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/education_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/educationQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/education_question"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/educationLevelRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educationQuestion">

        <RadioButton
            android:id="@+id/belowHighSchoolRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/below_high_school_radio" />

        <RadioButton
            android:id="@+id/highSchoolRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_school_radio" />

        <RadioButton
            android:id="@+id/bachelorsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bachelors_radio" />

        <RadioButton
            android:id="@+id/mastersRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masters_radio" />

        <RadioButton
            android:id="@+id/phdRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phd_radio" />

        <RadioButton
            android:id="@+id/tradeRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade_radio" />

        <RadioButton
            android:id="@+id/preferRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelEducationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="@+id/submitEducationButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submitEducationButton" />

    <Button
        android:id="@+id/submitEducationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>